[package]
name = "rust-blockchain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
futures-util = "0.3.30"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
sha3 = "0.10.8"
tokio = { version = "1.37.0", features = ["full"] }
tokio-tungstenite = "0.21.0"
uuid = { version = "1.8.0", features = ["v4"] }
